added under construction message to homepage

--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
 </div>
 </aside>
 <main class="col-12 col-md-9 col-xl-8 pl-md-5" role=main>
+<div class="pageinfo pageinfo-primary">
+<h3 id=under-construction>Under Construction!</h3>
+<p>Thanks for your patience as this project begins :)</p>
+</div>
 <h4 id=the-challenge>The Challenge</h4>
 <p>Cloud computing is a vast domain with offerings from many providers.</p>
 <ul>
