updated mispelling of productHierachyTier to productHierarchyTier for network/gcp/neg/models

--- a/features/container-based/index.html
+++ b/features/container-based/index.html
@@ -440,6 +440,71 @@
 </div>
 </div>
 </div>
+<div class="col-lg-4 col-sm-6 mb-4 d-flex">
+<div class="card flex-fill border-primary rounded hover-shadow">
+<div class=card-body>
+<article class="article-teaser article-type-products">
+<h5 class=card-title><a href=/products/network/gcp/neg/>Google Cloud Network Endpoint Group</a></h5>
+<p></p>
+<header class=article-meta>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-1">
+<h5 class=taxonomy-title>Providers:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/providers/gcp/ data-taxonomy-term=gcp><span class=taxonomy-label>gcp</span></a></li>
+</ul>
+</div>
+<div class="taxonomy taxonomy-terms-article taxo-services mb-1">
+<h5 class=taxonomy-title>Services:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/services/network/ data-taxonomy-term=network><span class=taxonomy-label>network</span></a></li>
+</ul>
+</div>
+<div class="taxonomy taxonomy-terms-article taxo-categories mb-1">
+<h5 class=taxonomy-title>Categories:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/categories/load-balancer/ data-taxonomy-term=load-balancer><span class=taxonomy-label>load balancer</span></a></li>
+<li><a class=taxonomy-term href=/categories/application-load-balancer/ data-taxonomy-term=application-load-balancer><span class=taxonomy-label>application load balancer</span></a></li>
+<li><a class=taxonomy-term href=/categories/gateway-load-balancer/ data-taxonomy-term=gateway-load-balancer><span class=taxonomy-label>gateway load balancer</span></a></li>
+<li><a class=taxonomy-term href=/categories/network-load-balancer/ data-taxonomy-term=network-load-balancer><span class=taxonomy-label>network load balancer</span></a></li>
+</ul>
+</div>
+<div class="taxonomy taxonomy-terms-article taxo-domains mb-1">
+<h5 class=taxonomy-title>Domains:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/domains/connectivity/ data-taxonomy-term=connectivity><span class=taxonomy-label>connectivity</span></a></li>
+</ul>
+</div>
+<div class=grouped-model-title><a href=/products/network/gcp/neg/models/hybrid-connectivity/><i class="fa fa-bookmark"></i> Hybrid Connectivity NEG</a></div>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-2 mt-2">
+</div>
+<div class=grouped-model-title><a href=/products/network/gcp/neg/models/internet/><i class="fa fa-bookmark"></i> Internet NEG</a></div>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-2 mt-2">
+</div>
+<div class=grouped-model-title><a href=/products/network/gcp/neg/models/private-service-connect/><i class="fa fa-bookmark"></i> Private Service Connect NEG</a></div>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-2 mt-2">
+</div>
+<div class=grouped-model-title><a href=/products/network/gcp/neg/models/serverless/><i class="fa fa-bookmark"></i> Serverless NEG</a></div>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-2 mt-2">
+</div>
+<div class=grouped-model-title><a href=/products/network/gcp/neg/models/zonal/><i class="fa fa-bookmark"></i> Zonal NEG</a></div>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-2 mt-2">
+<div class="taxonomy taxonomy-terms-article taxo-features mb-1">
+<h5 class=taxonomy-title>Features:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/features/container-based/ data-taxonomy-term=container-based><span class=taxonomy-label>container-based</span></a></li>
+</ul>
+</div>
+</div>
+</header>
+</article>
+</div>
+</div>
+</div>
 </div>
 </div>
 </main>
