--- a/products/network/gcp/neg/models/serverless/index.html
+++ b/products/network/gcp/neg/models/serverless/index.html
@@ -326,7 +326,38 @@
 <h1>Google Cloud Network Endpoint Group (serverless)</h1>
 <header class=article-meta>
 <hr>
-<h4>Related</h4>
+<h5><a href=/products/network/gcp/neg/><i class="fas fa-angle-left"></i> Google Cloud Network Endpoint Group (NEG)</a></h5>
+<div class="taxonomy taxonomy-terms-article taxo-providers mb-1">
+<h5 class=taxonomy-title>Providers:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/providers/gcp/ data-taxonomy-term=gcp><span class=taxonomy-label>gcp</span></a></li>
+</ul>
+</div>
+<div class="taxonomy taxonomy-terms-article taxo-services mb-1">
+<h5 class=taxonomy-title>Services:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/services/network/ data-taxonomy-term=network><span class=taxonomy-label>network</span></a></li>
+</ul>
+</div>
+<div class="taxonomy taxonomy-terms-article taxo-categories mb-1">
+<h5 class=taxonomy-title>Categories:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/categories/load-balancer/ data-taxonomy-term=load-balancer><span class=taxonomy-label>load balancer</span></a></li>
+<li><a class=taxonomy-term href=/categories/application-load-balancer/ data-taxonomy-term=application-load-balancer><span class=taxonomy-label>application load balancer</span></a></li>
+<li><a class=taxonomy-term href=/categories/gateway-load-balancer/ data-taxonomy-term=gateway-load-balancer><span class=taxonomy-label>gateway load balancer</span></a></li>
+<li><a class=taxonomy-term href=/categories/network-load-balancer/ data-taxonomy-term=network-load-balancer><span class=taxonomy-label>network load balancer</span></a></li>
+</ul>
+</div>
+<div class="taxonomy taxonomy-terms-article taxo-domains mb-1">
+<h5 class=taxonomy-title>Domains:</h5>
+<br>
+<ul class="taxonomy-terms ml-2">
+<li><a class=taxonomy-term href=/domains/connectivity/ data-taxonomy-term=connectivity><span class=taxonomy-label>connectivity</span></a></li>
+</ul>
+</div>
 </header>
 </div>
 </main>
